Complete the project

--- a/movie-details.html
+++ b/movie-details.html
@@ -40,7 +40,7 @@
       </div>
       <!-- Movie Details Output -->
       <div id="movie-details">
-        <div class="details-top">
+        <!-- <div class="details-top">
           <div>
             <img
               src="images/no-image.jpg"
@@ -72,8 +72,8 @@
             </ul>
             <a href="#" target="_blank" class="btn">Visit Movie Homepage</a>
           </div>
-        </div>
-        <div class="details-bottom">
+        </div> -->
+        <!-- <div class="details-bottom">
           <h2>Movie Info</h2>
           <ul>
             <li><span class="text-secondary">Budget:</span> $1,000,000</li>
@@ -83,7 +83,7 @@
           </ul>
           <h4>Production Companies</h4>
           <div class="list-group">Company 1, Company 2, Company 3</div>
-        </div>
+        </div> -->
       </div>
     </section>
 
